# djinn

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES
lib/: CMakeLists.txt
lib/inc/djinn/: Component.hpp  Context.hpp  Engine.hpp  Entity.hpp  System.hpp  Time.hpp
lib/inc/djinn/components/: InputComponents.hpp  Mixins.hpp  PhysicsComponents.hpp  RenderComponents.hpp  SpatialComponents.hpp  TransformComponents.hpp
lib/inc/djinn/contexts/: GLFWContext.hpp
lib/inc/djinn/entities/: PlayerEntity.hpp
lib/inc/djinn/sync/: Mutex.hpp  Thread.hpp  ThreadPool.hpp
lib/inc/djinn/systems/: BehaviorSystem.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp
lib/src/: Component.cpp  Context.cpp  Engine.cpp  Entity.cpp  System.cpp  Time.cpp
lib/src/components/: PhysicsComponents.cpp  SpatialComponents.cpp
lib/src/contexts/: GLFWContext.cpp
lib/src/entities/: PlayerEntity.cpp
lib/src/sync/: Mutex.cpp  Thread.cpp  ThreadPool.cpp
lib/src/systems/: InputSystem.cpp  RenderSystem.cpp
test/: CMakeLists.txt  enginetest.cpp  main.cpp  systest.cpp  threadtest.cpp
test/enginetest/: CMakeLists.txt  enginetest.cpp
test/glfwtest/: CMakeLists.txt
test/rendertest/: CMakeLists.txt  rendertest.cpp
test/systest/: CMakeLists.txt  systest.cpp
test/threadtest/: CMakeLists.txt  threadtest.cpp
test/timetest/: CMakeLists.txt  timetest.cpp
